Crash switching Rendering Engines while viewport rendering + animating #44021

Closed
opened 2015-03-17 00:33:19 +01:00 by Georg K · 6 comments

Sorry, I just keep on torturing Blender with illogical stuff, but a crash is a crash so I'm reporting it:

System Information
Win 7 x64, Ubuntu 14.04 x64, Radeon HD 7770

Blender Version
Broken: 2,73a, 2.74RC1
Worked: -

Short description of error
Blender crashes (no error message in the windows console, but Ubuntu reports a segfault) if I switch rendering engines back and forth while rendered viewport shading is active and the animation is played back. It won't crash if the animation is not running.

Exact steps for others to reproduce the error
In the default scene, activate rendered viewport shading (Shift-Z) in Blender Internal or Cycles and start animation playback with Alt-A.
Now switch from BI to Cycles or vice-versa and keep switching between those two until blender crashes, usually you have to switch up to three times.

Sorry, I just keep on torturing Blender with illogical stuff, but a crash is a crash so I'm reporting it: **System Information** Win 7 x64, Ubuntu 14.04 x64, Radeon HD 7770 **Blender Version** Broken: 2,73a, 2.74RC1 Worked: - **Short description of error** Blender crashes (no error message in the windows console, but Ubuntu reports a segfault) if I switch rendering engines back and forth while rendered viewport shading is active and the animation is played back. It won't crash if the animation is not running. **Exact steps for others to reproduce the error** In the default scene, activate rendered viewport shading (Shift-Z) in Blender Internal or Cycles and start animation playback with Alt-A. Now switch from BI to Cycles or vice-versa and keep switching between those two until blender crashes, usually you have to switch up to three times.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @georgK

Added subscriber: @georgK

This issue was referenced by 1724513fc6

This issue was referenced by 1724513fc647056fc5831a344809058b695fcdb5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1724513fc6.

Closed by commit 1724513fc6.

This issue was referenced by 584aed0721

This issue was referenced by 584aed0721f400cafb9a0849e42a49de3d7f7a34
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44021
No description provided.