Fix T44021: Crash switching Rendering Engines while viewport rendering + animating

Make sure preview render job is cancelled before freeing the render engine
associated to the viewport.